--- a/packages/react-reconciler/package.json
+++ b/packages/react-reconciler/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-reconciler",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "React协调器",
+  "module": "index.ts",
+  "dependencies": {
+    "shared":"workspace:*"
   },
   "keywords": [],
   "author": "",
