--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compileOnSave": true,
+	"include": ["./packages/**/*"],
 	"compilerOptions": {
 		"target": "ESNext",
 		"useDefineForClassFields": true,
@@ -18,7 +19,8 @@
 		"skipLibCheck": true,
 		"baseUrl": "./packages",
 		"paths": {
-			"hostConfig":["./react-dom/src/hostConfig.ts"]
+			"hostConfig":["./react-dom/src/hostConfig.ts"],
+			"react-dom":["./react-dom/index.ts"]
 		},
 	}
 }
